--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "watch:firefox": "node esbuild.config.mjs --watch --firefox",
     "typecheck": "tsc --noEmit",
     "i18n:check": "npx tsx scripts/check-i18n.ts",
-    "test": "vitest",
-    "test:run": "vitest run",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
     "e2e": "playwright test",
     "e2e:chrome": "playwright test --project=chromium",
