--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -6,12 +6,13 @@
     "browser_specific_settings": {
         "gecko": {
             "id": "tabburrow@example.com",
-            "strict_min_version": "109.0"
+            "strict_min_version": "139.0"
         }
     },
     "permissions": [
         "activeTab",
         "tabs",
+        "tabGroups",
         "storage",
         "contextMenus",
         "alarms",
