--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     },
     "include": [
         "src/**/*.ts",
-        "src/**/*.tsx"
+        "src/**/*.tsx",
+        "e2e/**/*.ts"
     ],
     "exclude": [
         "node_modules",
