--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "e2e:debug": "playwright test --debug"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-virtuoso": "^4.12.0",
