fix: リリースワークフローのEOFデリミタ衝突エラーを修正
git logの出力に"EOF"が含まれる場合、GitHub Actionsの
$GITHUB_OUTPUTでデリミタの衝突が発生していた問題を修正。
タイムスタンプを含むランダムなデリミタを生成することで回避。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,9 +86,12 @@ jobs:
             git log --pretty=format:"- %s (%h)" >> changelog.md
           fi
           
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
+          # ランダムなデリミタを生成してEOF衝突を回避
+          DELIMITER="CHANGELOG_$(date +%s%N)"
+          echo "changelog<<${DELIMITER}" >> $GITHUB_OUTPUT
           cat changelog.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          echo "" >> $GITHUB_OUTPUT
+          echo "${DELIMITER}" >> $GITHUB_OUTPUT
 
       - name: リリースを作成
         uses: softprops/action-gh-release@v2
