fix: リリースワークフローで前のタグを正しく取得できるよう修正
actions/checkoutでfetch-depth: 0とfetch-tags: trueを設定し、
完全なコミット履歴とタグ情報を取得するように変更。
これにより、プレリリース間の変更履歴が正しく生成される。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - name: リポジトリをチェックアウト
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # 完全な履歴を取得（タグ取得に必要）
+          fetch-tags: true
 
       - name: Node.jsをセットアップ
         uses: actions/setup-node@v4
