--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "e2e": "playwright test",
     "e2e:chrome": "playwright test --project=chromium",
     "e2e:headed": "playwright test --headed",
-    "e2e:debug": "playwright test --debug"
+    "e2e:debug": "playwright test --debug",
+    "screenshot": "playwright test --config=screenshots/playwright.config.ts --project=chromium"
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
