--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -5,8 +5,13 @@
     "description": "タブを保存して管理する拡張機能",
     "browser_specific_settings": {
         "gecko": {
-            "id": "tabburrow@example.com",
-            "strict_min_version": "139.0"
+            "id": "tabburrow@taremin.github.io",
+            "strict_min_version": "139.0",
+            "data_collection_permissions": {
+                "required": [
+                    "none"
+                ]
+            }
         }
     },
     "permissions": [
