--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:firefox": "node esbuild.config.mjs --firefox",
     "watch": "node esbuild.config.mjs --watch --chrome",
     "watch:firefox": "node esbuild.config.mjs --watch --firefox",
+    "build:firefox-android": "node esbuild.config.mjs --firefox-android",
     "typecheck": "tsc --noEmit",
     "i18n:check": "npx tsx scripts/check-i18n.ts",
     "test": "vitest run",
