chore: デバッグスクリプトの整理と環境構築
- デバッグ用スクリプトを `e2e/` から `debug_scripts/` へ移動・整理
- デバッグ専用の設定ファイル `playwright.debug.config.ts` を作成
- 共通処理を `debug_scripts/debug_utils.ts` に集約（データ投入、ビュー切り替え、スクリーンショット、コンソールデバッグ）
- スクリーンショット保存先を `debug_scripts/screenshots/` に固定し、git管理外に設定
- `npm run debug:e2e` コマンドを追加

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ tmp/
 
 # スクリーンショット出力
 screenshots/output/
+debug_scripts/screenshots/*
+!debug_scripts/screenshots/.gitkeep
 
 # Playwright
 playwright-report/
