--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch:firefox": "node esbuild.config.mjs --watch --firefox",
     "build:firefox-android": "node esbuild.config.mjs --firefox-android",
     "typecheck": "tsc --noEmit",
+    "version:sync": "npx tsx scripts/sync-version.ts",
     "i18n:check": "npx tsx scripts/check-i18n.ts",
     "test": "vitest run",
     "test:watch": "vitest watch",
