chore: configure automatic version sync
- package.json: 'version' ライフサイクルスクリプトを追加し、npm version 実行時に自動でmanifestファイルを同期・ステージングするように設定
- docs/build_and_deploy.md: 自動同期についての説明を更新

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:firefox-android": "node esbuild.config.mjs --firefox-android",
     "typecheck": "tsc --noEmit",
     "version:sync": "npx tsx scripts/sync-version.ts",
+    "version": "npm run version:sync && git add src/manifest.*.json",
     "i18n:check": "npx tsx scripts/check-i18n.ts",
     "test": "vitest run",
     "test:watch": "vitest watch",
