--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-virtuoso": "^4.12.0",
     "webextension-polyfill": "^0.12.0"
