--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
         ],
         "jsx": "react-jsx",
         "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
         "noEmit": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
